[package]
name = "hyperspace-primitives"
version = "0.1.0"
edition = "2021"
description = "Shared primtives for hyperspace based crates"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[dependencies]
# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
hex = "0.4.3"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "sync", "time"] }
thiserror = "1.0.31"
log = "0.4.17"

# substrate
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }

# ibc
ibc = { path = "../../ibc/modules", features = [] }
ibc-proto = { path = "../../ibc/proto" }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
ibc-rpc = { path = "../../contracts/pallet-ibc/rpc" }
ics08-wasm = { path = "../../light-clients/ics08-wasm" }

[features]
testing = []