[package]
name = "hyperspace-testsuite"
version = "0.1.0"
edition = "2021"
description = "Integration testsuite for hyperspace-core and its interfaces"
authors = [
    "Seun Lanlege <seunlanlege@gmail.com>",
    "David Salami <wizdave97@gmail.com>",
]

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync", "time"] }
log = "0.4.17"
anyhow = "1.0.66"
async-trait = "0.1.58"
futures = "0.3.24"
json = { version = "1.0.85", package = "serde_json" }

ibc = { path = "../../ibc/modules" }
ibc-proto = { path = "../../ibc/proto" }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

hyperspace-core = { path = "../core", features = ["testing"] }
hyperspace-parachain = { path = "../parachain", features = ["testing"] }
hyperspace-primitives = { path = "../primitives", features = ["testing"] }
pallet-ibc = { path = "../../contracts/pallet-ibc" }
ics10-grandpa = { path = "../../light-clients/ics10-grandpa" }

# substrate
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
grandpa-client-primitives = { package = "grandpa-light-client-primitives", path = "../../algorithms/grandpa/primitives", default-features = false }
finality-grandpa = { version = "0.16.0", features = ["derive-codec"], default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", features = ["full_crypto"] }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
light-client-common = { path = "../../light-clients/common" }
grandpa-light-client = { path = "../../algorithms/grandpa/verifier", package = "grandpa-light-client-verifier" }
hex = "0.4.3"

[dev-dependencies]
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
hyperspace-core = { path = "../core", features = ["testing", "build-metadata-from-ws"] }
hyperspace-parachain = { path = "../parachain", features = ["testing", "build-metadata-from-ws"] }
hyperspace-cosmos = { path = "../cosmos", features = [] }

# We need this so the tests run sequentially
[[test]]
name = "parachain_parachain"

[[test]]
name = "parachain_cosmos"
