[package]
name = "hyperspace-testsuite"
version = "0.1.0"
edition = "2021"
description = "Integration testsuite for hyperspace-core and its interfaces"
authors = [
    "Seun Lanlege <seunlanlege@gmail.com>",
    "David Salami <wizdave97@gmail.com>",
]

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "time"] }
log = { workspace = true }
anyhow = "1.0.66"
async-trait = "0.1.58"
futures = "0.3.24"
json = { version = "1.0.85", package = "serde_json" }
parity-scale-codec = { workspace = true }
subxt = { git = "https://github.com/paritytech/subxt",  tag = "v0.29.0", features = ["substrate-compat"] }

ibc = { path = "../../ibc/modules" }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }

hyperspace-core = { path = "../core", features = ["testing"] }
hyperspace-parachain = { path = "../parachain", features = ["testing"] }
hyperspace-primitives = { path = "../primitives", features = ["testing"] }
pallet-ibc = { workspace = true }
pallet-ibc-ping = { workspace = true }
ics10-grandpa = { workspace = true }

# substrate
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
grandpa-client-primitives = { workspace = true }
finality-grandpa = { version = "0.16.2", features = ["derive-codec"], default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-keyring = { workspace = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", features = ["full_crypto"] }
sp-trie = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
light-client-common = { workspace = true }
grandpa-light-client = { path = "../../algorithms/grandpa/verifier", package = "grandpa-light-client-verifier" }
hex = { workspace = true }
rand = { workspace = true }
toml = "0.7.4"

[dev-dependencies]
subxt = { git = "https://github.com/paritytech/subxt",  tag = "v0.29.0", features = ["substrate-compat"] }
hyperspace-core = { path = "../core", features = ["testing", "build-metadata-from-ws"] }
hyperspace-parachain = { path = "../parachain", features = ["testing"] }
hyperspace-cosmos = { path = "../cosmos", features = [] }

# We need this so the tests run sequentially
[[test]]
name = "parachain_parachain"

[[test]]
name = "parachain_cosmos"
