[package]
name = "hyperspace-testsuite"
version = "0.1.0"
edition = "2021"
description = "Integration testsuite for hyperspace-core and its interfaces"
authors = [
    "Seun Lanlege <seunlanlege@gmail.com>",
    "David Salami <wizdave97@gmail.com>",
]

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "sync", "time"] }
log = { workspace = true }
anyhow = "1.0.66"
async-trait = "0.1.58"
futures = { workspace = true }
json = { version = "1.0.85", package = "serde_json" }
parity-scale-codec = { workspace = true }
subxt = { workspace = true }

ibc = { path = "../../ibc/modules" }
ibc-proto = { workspace = true }
tendermint-proto = { workspace = true }

hyperspace-core = { path = "../core", features = ["testing"] }
hyperspace-parachain = { path = "../parachain", features = ["testing"] }
hyperspace-primitives = { path = "../primitives", features = ["testing"] }
pallet-ibc = { workspace = true }
pallet-ibc-ping = { workspace = true }
ics10-grandpa = { workspace = true }

# substrate
polkadot-core-primitives = { workspace = true }
grandpa-client-primitives = { workspace = true }
finality-grandpa = { version = "0.16.2", features = ["derive-codec"], default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false }
sp-keyring = { workspace = true }
sp-core = { workspace = true, features = ["full_crypto"] }
sp-trie = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true, default-features = false }
light-client-common = { workspace = true }
grandpa-light-client = { path = "../../algorithms/grandpa/verifier", package = "grandpa-light-client-verifier" }
hex = { workspace = true }
rand = { workspace = true }
toml = "0.7.4"

[dev-dependencies]
subxt = { workspace = true }
hyperspace-core = { path = "../core", features = ["testing", "build-metadata-from-ws"] }
hyperspace-parachain = { path = "../parachain", features = ["testing"] }
hyperspace-cosmos = { path = "../cosmos", features = [] }

# We need this so the tests run sequentially
[[test]]
name = "parachain_parachain"

[[test]]
name = "parachain_cosmos"
