[package]
name         = "ibc"
version      = "0.15.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/composableFi/composable"
authors      = ["Informal Systems <hello@informal.systems>", "Seun Lanlege <seun@composable.finance>", "David Salami <david@composable.finance>"]
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "flex-error/std",
    "flex-error/eyre_tracer",
    "ibc-proto/std",
    "ics23/std",
    "clock",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "primitive-types/std"
]
clock = ["tendermint/clock", "time/std"]

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["clock", "std", "sha2"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.18.0", path = "../proto", default-features = false }
derive = { path = "../derive", package = "ibc-derive" }
ics23 = { git = "https://github.com/confio/ics23", rev = "a4daeb4c24ce1be827829c0841446abc690c4f11", default-features = false }
time = { version = "0.3", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
tracing = { version = "0.1.34", default-features = false }
prost = { version = "0.11", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
uint = { version = "0.9", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.2", optional = true }
tendermint = { git = "https://github.com/composableFi/tendermint-rs", rev = "2c513dcaf2385d5b5f55e129a5ed11cc8d8ad5d0", default-features = false }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "2c513dcaf2385d5b5f55e129a5ed11cc8d8ad5d0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.74"
sha3 = { version = "0.10.1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
