[package]
name = "cf-guest-cw"
version = "0.0.0"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cf-guest = { path = "../../../emulated-light-client/common/cf-guest", default-features = false }
guestchain = { path = "../../../emulated-light-client/common/guestchain", default-features = false }

base64 = "0.22"
borsh = { version = "0.10.3", default-features = false }
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
derive_more = "0.99.17"
ed25519 = { version = "2.2.3", default-features = false }
ed25519-consensus = { version = "2.1", optional = true, default-features = false }
#ed25519-zebra = { version = "3.1.0", default-features = false }
ibc = { version = "0.50", default-features = false, features = ["serde", "schema"] }
prost = { version = "0.12.3", default-features = false }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
sha2 = "0.10"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
default = ["rust-crypto"]
rust-crypto = ["ed25519-consensus"]
std = [
	"ed25519/std",
	"ed25519-consensus?/std",
#	"ed25519-zebra/std",
	"ibc/std",
	"prost/std",
	"serde/std",
	"sha2/std",
]
