[package]
name = "light-client-common"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]

[features]
default = ["std"]
std = [
    "anyhow/std",
    "codec/std",
    "serde/std",
    "hash-db/std",
    "ibc/std",
    "sp-storage/std",
    "sp-trie/std",
]
enable-subxt = ["subxt"]

[dependencies]
# crates.io
anyhow = { version = "1.0.65", default-features = false }
codec = { version = "3.2.1", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
hash-db = { version = "0.15.2", default-features = false }
async-trait = { version = "0.1.53", default-features = false }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

# ibc
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

# substrate
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-beefy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
subxt = { git = "https://github.com/paritytech/subxt", rev = "2a4da618a033bb82f768e4ef67b093b371f8b492", features = ["substrate-compat"], optional = true }