[package]
name = "light-client-common"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]

[features]
default = ["std"]
std = [
	"anyhow/std",
	"codec/std",
	"serde/std",
	"hash-db/std",
	"ibc/std",
	"sp-storage/std",
	"sp-trie/std",
	"ibc-proto/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-runtime/std"
]
enable-subxt = ["subxt"]

[dependencies]
# crates.io
anyhow = { version = "1.0.65", default-features = false }
codec = { version = "3.2.1", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
hash-db = { version = "0.16.0", default-features = false }
async-trait = { version = "0.1.53", default-features = false }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# ibc
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

# substrate
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.29.0", features = ["substrate-compat"], optional = true }
